# linux-research

./: .gitignore  README.rst
Spiral/src/: matr.java
X/auth/: Makefile  auth.c
X/dpms/: main.c
X/kbrd/: Makefile  kbrd.c  keys_management.c  keys_management.h
aalib/: a.c
alpha/: Makefile  main.c
asm/8/: Makefile  an_asm.s  c.c  c.s  f.s  o.s  pr.s
asm/asm/: Makefile  Makefile1.mk
asm/c/: fc.c  fc.s
bash/: params.sh  r.sh  redirection.sh
c++/: Makefile  main.cpp  main.s
colors/: colors.sh
db/litesql/: Makefile  example.cpp  exampledatabase.cpp  exampledatabase.hpp  exampledatabase.xml
esccsv/: Makefile  esccsv.c
files/badname/: Makefile  badname.c  badname.s
files/console/: Makefile  getfd.c  main.c
files/grab/: Makefile  grab.c
files/idle/: Makefile  idle.c
files/pipe/: Makefile  chi.c  par.c
files/pty/: out  pty.c
files/tcgetpgrp/: Makefile  tcgp.c
files/terminal/: Makefile  log  terminal.c
fork/: fork.c
forkbomb/: forkbomb.c
gl/mountain/: Makefile  main.c
graphviz/: g.dot
gtk/actn/: test.c
gtk/glademm/: Makefile.am  Makefile.am_fragment  Makefile.in
gtk/glademm/menus/: Makefile  Makefile.am  example  example.cc  example.glade
gtk/gwarn/: Makefile  gwarn.c
gtk/mainloop/: Makefile  ml.c
gtk/plot/: plot.c  (+1 more)
hal/: Makefile  hal.c  testhib.c
modals/: modals.html
progressbar/: progressbar.css  progressbar.html  progressbar.js
python/: nones.py
rabbitmq/: parse_rabbit.py  producer.py
showwho/: Makefile  showwho.c
utmp/: Makefile
xml/: Makefile  f.html  ttablerdb.xml  xml.cpp  xmlparser.cpp  xmlparser.hpp
(+70 files in other folders)
